[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "entx"
version = "3.0.4"
authors = [
  { name="MaskdDev", email="maskddev@gmail.com" },
]
description = "The EntX encryption library for python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = []

[project.urls]
"Homepage" = "https://github.com/MaskdDev/entx"
"Bug Tracker" = "https://github.com/MaskdDev/entx/issues"